--- a/src/pocketbase.net.csproj
+++ b/src/pocketbase.net.csproj
@@ -3,7 +3,24 @@
   <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <AssemblyName>pocketbase.NET</AssemblyName>
+    <RootNamespace>pocketbase.net</RootNamespace>
+    <PackageTags>Cleint for pocktbase ; Blazorwebassembly support with realtime communications;</PackageTags>
+    <Title>Pocketbase SDK for dotnet </Title>
+    <Version>0.01.1</Version>
+    <Authors>namin-amin</Authors>
+    <Company>-</Company>
+    <Description>Pocketbase SDK for dotnet ,SDK designed inline with pocketbase js sdk</Description>
+    <PackageProjectUrl>https://github.com/namin-amin/pocketbase.NET</PackageProjectUrl>
+    <PackageReadmeFile>Readme.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/namin-amin/pocketbase.NET</RepositoryUrl>
+    <RepositoryType>github</RepositoryType>
+    <PackageReleaseNotes></PackageReleaseNotes>
+    <PackAsTool>False</PackAsTool>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <AssemblyVersion>0.1.0.1</AssemblyVersion>
+    <FileVersion>0.1.0.1</FileVersion>
   </PropertyGroup>
 
 
@@ -21,6 +38,14 @@
     <EditorConfigFiles Remove="D:\Projects\Pb\pocketbase.net\.editorconfig" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\LICENSE.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\Readme.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="D:\Projects\Pb\pocketbase.net\.editorconfig" />
   </ItemGroup>
 
