--- a/pocketbase.NET.blazor/pocketbase.NET.blazor.csproj
+++ b/pocketbase.NET.blazor/pocketbase.NET.blazor.csproj
@@ -4,6 +4,15 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <Title>PocketBase cleint blazor</Title>
+    <Description>this package is a extension of  https://www.nuget.org/packages/pocketbase.NET/  specific to Blazor.NET</Description>
+    <PackageProjectUrl>https://github.com/namin-amin/pocketbase.NET</PackageProjectUrl>
+    <RepositoryType>github</RepositoryType>
+    <PackageTags>pocketbase;Blazor.Net</PackageTags>
+    <NeutralLanguage>aa-DJ</NeutralLanguage>
+    <AssemblyVersion>0.01</AssemblyVersion>
+    <FileVersion>0.01</FileVersion>
   </PropertyGroup>
 
 
