--- a/pocketbase.NET.blazor/pocketbase.NET.blazor.csproj
+++ b/pocketbase.NET.blazor/pocketbase.NET.blazor.csproj
@@ -13,7 +13,20 @@
     <NeutralLanguage>aa-DJ</NeutralLanguage>
     <AssemblyVersion>0.01</AssemblyVersion>
     <FileVersion>0.01</FileVersion>
+    <PackageReadmeFile>Readme.md</PackageReadmeFile>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\Readme.md" Link="Readme.md">
+      <PackagePath>\</PackagePath>
+      <Pack>True</Pack>
+    </None>
+  </ItemGroup>
 
 
   <ItemGroup>
@@ -30,5 +43,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\src\pocketbase.net.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Readme.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 </Project>
